# system-monitoring

./: .gitignore  Makefile  README.md  celerybeat-schedule.db  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
system_monitoring/: admin.py  apps.py  asgi.py  auth_utils.py  celery.py  metrics_parsers.py  middleware.py  models.py  settings.py  tasks.py  urls.py  views_api.py  views_ui.py  wsgi.py
system_monitoring/migrations/: 0001_initial.py  0002_rename_is_ative_machine_is_active.py  0003_incident.py  0004_monitoruser.py
system_monitoring/static/: incidents.css  incidents.js
system_monitoring/templates/: incidents.html  login.html
